# PaperRoute

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  config-example.yaml  justfile  pyproject.toml
.claude/skills/review-and-fix/: SKILL.md
.github/workflows/: ci.yml
docs/: TESTING.md
src/docproc/: config.py  models.py  ocr.py
tasks/: 01-project-setup.md  02-configuration.md  03-data-models.md  04-ocr-pipeline.md  05-vision-extraction.md  06-reconciler.md  07-classifier.md  08-rag-indexer.md  09-watcher-daemon.md  10-chat-frontend.md  11-file-mover.md  12-testing-verification.md
tests/: test_config.py  test_init.py  test_models.py  test_ocr.py
