[project]
name = "docproc"
version = "0.1.1"
requires-python = ">=3.14"
dependencies = [
    "watchdog>=4.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docproc"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "ty>=0.0.1a0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=docproc --cov-report=term-missing --cov-fail-under=80"

[tool.ruff]
target-version = "py314"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
